--- a/entity_registry.yaml
+++ b/entity_registry.yaml
@@ -175,3 +175,18 @@ remote.bedroom:
 media_player.sunroom_tv:
   platform: cast
   unique_id: 9432a32a-a266-7063-1cd6-5f338445bfc5
+sensor.alarm_type:
+  platform: zwave
+  unique_id: 6-72057594144636929
+sensor.alarm_level:
+  platform: zwave
+  unique_id: 6-72057594144636945
+binary_sensor.sensor:
+  platform: zwave
+  unique_id: 6-72057594143571968
+sensor.zooz_zse08_contact_sensor_sourcenodeid:
+  platform: zwave
+  unique_id: 6-72057594144636961
+sensor.zooz_zse08_contact_sensor_access_control:
+  platform: zwave
+  unique_id: 6-72057594144637073
