--- a/customize/binary_sensors.yaml
+++ b/customize/binary_sensors.yaml
@@ -1,41 +1,58 @@
 binary_sensor.living_room_thermostat_fan:
   friendly_name: 'Living Room Thermostat Fan'
-  
   hidden: True
   homebridge_hidden: True
 
 
 binary_sensor.living_room_thermostat_has_leaf:
   friendly_name: 'Living Room Thermostat Has Leaf'
-  
   hidden: True
   homebridge_hidden: True
 
 
 binary_sensor.living_room_thermostat_is_locked:
   friendly_name: 'Living Room Thermostat is Locked'
-  
   hidden: True
   homebridge_hidden: True
 
 
 binary_sensor.living_room_thermostat_is_using_emergency_heat:
   friendly_name: 'Living Room Thermostat is using Emergency Heat'
-  
   hidden: True
   homebridge_hidden: True
 
 
 binary_sensor.living_room_thermostat_online:
   friendly_name: 'Living Room Thermostat Online'
-  
   hidden: True
   homebridge_hidden: True
 
+binary_sensor.back_door_sensor:
+  friendly_name: 'Back Door'
+  hidden: False
+  homebridge_hidden: false
+  icon: mdi:sensor
+
+binary_sensor.sensor:
+  friendly_name: 'Back Door'
+  hidden: False
+  homebridge_hidden: false
+  icon: mdi:sensor
 
 binary_sensor.basement_motion:
-  friendly_name: 'Basement Motion Sensor'
-  
+  friendly_name: 'Basement Motion'
+  hidden: False
+  homebridge_hidden: true
+  icon: mdi:sensor
+
+binary_sensor.living_room_sensor:
+  friendly_name: 'Living Room Motion'
+  hidden: False
+  homebridge_hidden: true
+  icon: mdi:sensor
+
+binary_sensor.bedroom_sensor:
+  friendly_name: 'Bedroom Motion'
   hidden: False
   homebridge_hidden: true
   icon: mdi:sensor
