--- a/customize/lights.yaml
+++ b/customize/lights.yaml
@@ -1,6 +1,6 @@
-light.bedroom:
-  friendly_name: 'Bedroom'
+# light.bedroom:
+#   friendly_name: 'Bedroom'
   
-  hidden: False
-  homebridge_hidden: True
+#   hidden: False
+#   homebridge_hidden: True
 
