--- a/groups/climate.yaml
+++ b/groups/climate.yaml
@@ -5,22 +5,40 @@ climate:
     - climate.living_room
     - group.nest
     - group.dark_sky
+    - group.dark_sky_forecast
     # - sensor.moon
     # - binary_sensor.iss
     # - sensor.launch_window
     # - camera.wu_doppler_weather
-    - sensor.living_room_thermostat_humidity
+    - group.living_room_climate
+    - group.bedroom_climate
+    # - sensor.living_room_temperature
+    # - sensor.living_room_thermostat_temperature
+    # - sensor.living_room_humidity
+    # - sensor.living_room_thermostat_humidity
+    # - sensor.bedroom_temperature
+    # - sensor.bedroom_humidity
 
 dark_sky:
   name: Dark Sky
   view: no
   entities:
-    - sensor.dark_sky_cloud_coverage
+    - sensor.dark_sky_temperature
+    - sensor.dark_sky_humidity
     - sensor.dark_sky_minutely_summary
+    - sensor.dark_sky_wind_speed
+    - sensor.dark_sky_cloud_coverage
     - sensor.dark_sky_nearest_storm_distance
     - sensor.dark_sky_precip_intensity
     - sensor.dark_sky_daily_max_precip_intensity
-    - sensor.dark_sky_wind_speed
-    - sensor.dark_sky_humidity
-    - sensor.dark_sky_temperature
     - sensor.dark_sky_uv_index
+
+dark_sky_forecast:
+  name: Forecast
+  view: no
+  entities:
+    - sensor.dark_sky_minutely_summary
+    - sensor.dark_sky_hourly_summary
+    - sensor.dark_sky_daily_high_apparent_temperature
+    - sensor.dark_sky_daily_low_apparent_temperature
+    - sensor.dark_sky_daily_max_precip_intensity
