--- a/groups/media.yaml
+++ b/groups/media.yaml
@@ -1,10 +1,22 @@
 media:
+  name: Media Players
   view: no
   entities:
     - media_player.atv_sunroom
     - media_player.bedroom
     - media_player.sunroom_tv
-    - group.all_remotes
-    # - remote.atv_sunroom
-    # - remote.bedroom
-    # - remote.harmony_hub
+    # - group.all_remotes
+    - remote.atv_sunroom
+    - remote.bedroom
+    - remote.harmony_hub
+
+downstairs_media:
+  name: Downstairs Media
+  view: no
+  entities:
+    - remote.harmony_hub
+    - media_player.atv_living_room
+    - media_player.atv_sunroom
+    - media_player.sunroom_tv
+    - remote.atv_living_room
+    - remote.atv_sunroom
