--- a/packages/processmonitor.yaml
+++ b/packages/processmonitor.yaml
@@ -10,13 +10,13 @@
 #       hidden: False
 
 #-------------------------------------------
-sensor:
-  - platform: systemmonitor
-    resources:
-      # - type: last_boot
-      - type: since_last_boot
-      - type: disk_use_percent
-        arg: /
+# sensor:
+#   - platform: systemmonitor
+#     resources:
+#       # - type: last_boot
+#       # - type: since_last_boot
+#       - type: disk_use_percent
+#         arg: /
 #  - platform: database
 
 #-------------------------------------------
