--- a/sensor/speedtest.yaml
+++ b/sensor/speedtest.yaml
@@ -1,10 +1,10 @@
-- platform: speedtest
-  minute: 30
-  hour:
-    - 0
-    - 6
-    - 12
-    - 18
-  monitored_conditions:
-    - download
-    - upload
+# - platform: speedtest
+#   minute: 30
+#   hour:
+#     - 0
+#     - 6
+#     - 12
+#     - 18
+#   monitored_conditions:
+#     - download
+#     - upload
